--- a/app/ingress.yaml
+++ b/app/ingress.yaml
@@ -11,7 +11,7 @@ spec:
     - host: arch.homework
       http:
         paths:
-          - path: /app
+          - path: /
             pathType: Prefix
             backend:
               service:
